[package]
name = "charlestown"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["csv", "rfc4180"]
categories = ["encoding"]
description = "A simple RFC 4180-compliant CSV reader and writer"
repository = "https://github.com/hoosiernational/Charlestown"
authors = ["James Oglesby <ohiorivernerd@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
